--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,14 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.24.0",
     "debug": "^4.3.2",
-    "dotenv": "^10.0.0",
-    "excel4node": "^1.2.1",
     "express": "^4.17.1",
     "firebase-admin": "^10.0.0",
-    "http-errors": "^1.8.0",
-    "nodemailer-smtp-transport": "^2.4.2"
+    "http-errors": "^1.8.0"
   },
   "scripts": {
     "dev": "set DEBUG=app:* && nodemon index.js"
